--- a/index.html
+++ b/index.html
@@ -9,38 +9,37 @@
 </head>
 
 <body>
-<div id="container">
-    <h1>calculator</h1>
-    <div id="calculator">
-        
-        <div id="display">
-            
-        </div>
-        <div id="btns">
-            <input type="button" value="DE" onclick="del()">
-            <input type="button" value="CA" onclick="clr()">
-            <input type="button" value="." onclick="displayValue(this)">
-            <input type="button" value="/" onclick="displayValue(this)">
-            <input type="button" value="7" onclick="displayValue(this)">
-            <input type="button" value="8" onclick="displayValue(this)">
-            <input type="button" value="9" onclick="displayValue(this)">
-            <input type="button" value="*" onclick="displayValue(this)">
-            <input type="button" value="4" onclick="displayValue(this)">
-            <input type="button" value="5" onclick="displayValue(this)">
-            <input type="button" value="6" onclick="displayValue(this)">
-            <input type="button" value="+" onclick="displayValue(this)">
-            <input type="button" value="1" onclick="displayValue(this)">
-            <input type="button" value="2" onclick="displayValue(this)">
-            <input type="button" value="3" onclick="displayValue(this)">
-            <input type="button" value="-" onclick="displayValue(this)">
-            <input type="button" value="0" onclick="displayValue(this)">
-            <input type="button" value="00" onclick="displayValue(this)">
-            <input type="button" value="%" onclick="displayValue(this)">
-            <input type="button" value="=" onclick="evaluateExpression() ">
-        </div>
+    <div id="container">
+        <h1>calculator</h1>
+        <div id="calculator">
+
+            <div id="display">
+
+            </div>
+            <div id="btns">
+                <input type="button" value="DE" onclick="del()">
+                <input type="button" value="CA" onclick="clr()">
+                <input type="button" value="." onclick="displayValue(this)">
+                <input type="button" value="/" onclick="displayValue(this)">
+                <input type="button" value="7" onclick="displayValue(this)">
+                <input type="button" value="8" onclick="displayValue(this)">
+                <input type="button" value="9" onclick="displayValue(this)">
+                <input type="button" value="*" onclick="displayValue(this)">
+                <input type="button" value="4" onclick="displayValue(this)">
+                <input type="button" value="5" onclick="displayValue(this)">
+                <input type="button" value="6" onclick="displayValue(this)">
+                <input type="button" value="+" onclick="displayValue(this)">
+                <input type="button" value="1" onclick="displayValue(this)">
+                <input type="button" value="2" onclick="displayValue(this)">
+                <input type="button" value="3" onclick="displayValue(this)">
+                <input type="button" value="-" onclick="displayValue(this)">
+                <input type="button" value="0" onclick="displayValue(this)">
+                <input type="button" value="00" onclick="displayValue(this)">
+                <input type="button" value="%" onclick="displayValue(this)">
+                <input type="button" value="=" onclick="evaluateExpression() ">
+            </div>
         </div>
     </div>
-</div>
-<script src="script.js"
-</body>
-</html>
+    </div>
+    <script src="script.js" </body>
+</html >
